--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
+    "build": "vite build",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "add": "vue-cli-service add",
     "dev": "vite",
-    "preview": "vite preview",
-    "serv": "vue-cli-service serv"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/cli": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -24,7 +20,6 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
-    "vite": "^4.0.0",
-    "vue-cli-plugin-multi-page": "~0.8.0"
+    "vite": "^4.0.0"
   }
 }
