--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite"
   },
   "dependencies": {
     "pinia": "^2.0.28",
